Fixed user property shifted downwards

--- a/components/databases/focalboard/src/components/properties/user/user.scss
+++ b/components/databases/focalboard/src/components/properties/user/user.scss
@@ -32,7 +32,6 @@
     .react-select__single-value {
         margin: 0;
         position: relative;
-        top: 12px;
         max-width: 100%;
     }
 
